--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
 .App {
   text-align: center;
 }
+
+.borderNone {
+  border: none;
+}
+
+.borderRight {
+  border: none;
+  border-right: 1px dotted;
+}
