--- a/src/App.css
+++ b/src/App.css
@@ -26,14 +26,14 @@
   border-bottom: 1px solid black;
   min-width: 100%;
   z-index: 2;
-  background-color: slategray;
+  background-color: rgb(152, 160, 169);
 }
 .open {
   position: fixed;
   border-bottom: 1px solid black;
   min-width: 100%;
   z-index: 2;
-  background-color: slategray;
+  background-color: rgb(152, 160, 169);
 }
 
 /* thought */
