changed navbar to sideNav

--- a/src/App.css
+++ b/src/App.css
@@ -35,7 +35,47 @@
   z-index: 2;
   background-color: rgb(152, 160, 169);
 }
-
+/* sideNav */
+.sideNav {
+  height: 100%;
+  width: 20%;
+  position: fixed;
+  background: rgb(41, 171, 226);
+  background: linear-gradient(90deg, rgba(41, 171, 226, 1) 0%, rgba(127, 201, 237, 0.7) 100%);
+  overflow-x: hidden;
+  overflow-y: scroll;
+  z-index: 2;
+}
+.sideNavSmall {
+  height: 100vh;
+  width: 50%;
+  margin-top: -70px;
+  padding-top: 70px;
+  position: fixed;
+  background: rgb(41, 171, 226);
+  background: linear-gradient(90deg, rgba(41, 171, 226, 1) 0%, rgba(127, 201, 237, 0.7) 100%);
+  overflow-x: hidden;
+  overflow-y: scroll;
+  z-index: 2;
+}
+.sideNavClosed {
+  height: 100%;
+  position: fixed;
+  width: fit-content;
+  top: 0;
+  left: 0;
+  z-index: 2;
+}
+.scrollbar::-webkit-scrollbar {
+  width: 0.5em;
+}
+.scrollbar::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+.scrollbar::-webkit-scrollbar-thumb {
+  background-color: darkgrey;
+  outline: 1px solid slategrey;
+}
 /* thought */
 .activeTodo:focus {
   min-height: 130px;
